--- a/project.cbp
+++ b/project.cbp
@@ -27,6 +27,7 @@
 		<Unit filename="doxyfile" />
 		<Unit filename="spaghetti.hpp" />
 		<Unit filename="src/doxyfile" />
+		<Unit filename="src/spaghetti.css" />
 		<Unit filename="src/test_buttons.cpp" />
 		<Unit filename="src/test_traffic_lights_1.cpp" />
 		<Unit filename="src/test_traffic_lights_2.cpp" />
