--- a/project.cbp
+++ b/project.cbp
@@ -30,6 +30,7 @@
 		<Unit filename="src/spaghetti.css" />
 		<Unit filename="src/test_buttons.cpp" />
 		<Unit filename="src/test_traffic_lights_1.cpp" />
+		<Unit filename="src/test_traffic_lights_1b.cpp" />
 		<Unit filename="src/test_traffic_lights_2.cpp" />
 		<Unit filename="src/test_traffic_lights_client.cpp" />
 		<Unit filename="src/udp_server.hpp" />
