--- a/project.cbp
+++ b/project.cbp
@@ -27,14 +27,17 @@
 		<Unit filename="doxyfile" />
 		<Unit filename="spaghetti.hpp" />
 		<Unit filename="src/doxyfile" />
+		<Unit filename="src/sample1.dot" />
+		<Unit filename="src/sample_1.cpp" />
 		<Unit filename="src/spaghetti.css" />
-		<Unit filename="src/test_buttons_1.cpp" />
 		<Unit filename="src/test_buttons_2.cpp" />
 		<Unit filename="src/test_buttons_3.cpp" />
 		<Unit filename="src/test_traffic_lights_1.cpp" />
 		<Unit filename="src/test_traffic_lights_1b.cpp" />
 		<Unit filename="src/test_traffic_lights_2.cpp" />
 		<Unit filename="src/test_traffic_lights_client.cpp" />
+		<Unit filename="src/turnstyle_1.cpp" />
+		<Unit filename="src/turnstyle_2.cpp" />
 		<Unit filename="src/udp_server.hpp" />
 		<Extensions>
 			<envvars />
