grouped asio stuff into own header

--- a/project.cbp
+++ b/project.cbp
@@ -26,15 +26,14 @@
 		<Unit filename="README.md" />
 		<Unit filename="doxyfile" />
 		<Unit filename="spaghetti.hpp" />
+		<Unit filename="src/asio_wrapper.hpp" />
 		<Unit filename="src/doxyfile" />
 		<Unit filename="src/sample1.dot" />
 		<Unit filename="src/sample_1.cpp" />
 		<Unit filename="src/spaghetti.css" />
-		<Unit filename="src/test_buttons_2.cpp" />
-		<Unit filename="src/test_buttons_3.cpp" />
-		<Unit filename="src/test_traffic_lights_2.cpp" />
-		<Unit filename="src/test_traffic_lights_client.cpp" />
 		<Unit filename="src/traffic_lights_1.cpp" />
+		<Unit filename="src/traffic_lights_2.cpp" />
+		<Unit filename="src/traffic_lights_client.cpp" />
 		<Unit filename="src/turnstyle_1.cpp" />
 		<Unit filename="src/turnstyle_2.cpp" />
 		<Unit filename="src/udp_server.hpp" />
