--- a/project.cbp
+++ b/project.cbp
@@ -34,6 +34,7 @@
 		<Unit filename="src/sample_0.cpp" />
 		<Unit filename="src/sample_1.cpp" />
 		<Unit filename="src/sample_2.cpp" />
+		<Unit filename="src/sample_3.cpp" />
 		<Unit filename="src/spaghetti.css" />
 		<Unit filename="src/traffic_lights_1.cpp" />
 		<Unit filename="src/traffic_lights_1b.cpp" />
