--- a/project.cbp
+++ b/project.cbp
@@ -39,6 +39,7 @@
 		<Unit filename="src/spaghetti.css" />
 		<Unit filename="src/traffic_lights_1.cpp" />
 		<Unit filename="src/traffic_lights_1b.cpp" />
+		<Unit filename="src/traffic_lights_1c.cpp" />
 		<Unit filename="src/traffic_lights_2.cpp" />
 		<Unit filename="src/traffic_lights_3.cpp" />
 		<Unit filename="src/traffic_lights_client.cpp" />
