--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: cpp
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libboost-all-dev
 install: true
 script: make demo
 
