--- a/project.cbp
+++ b/project.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="-DSPAG_USE_SIGNALS" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
