--- a/project.cbp
+++ b/project.cbp
@@ -42,6 +42,7 @@
 		<Unit filename="src/sample_2.cpp" />
 		<Unit filename="src/sample_3.cpp" />
 		<Unit filename="src/sample_3b.cpp" />
+		<Unit filename="src/sample_3c.cpp" />
 		<Unit filename="src/spaghetti.css" />
 		<Unit filename="src/traffic_lights_1.cpp" />
 		<Unit filename="src/traffic_lights_1b.cpp" />
