many fixes in signal handling, added test program, misc.

--- a/project.cbp
+++ b/project.cbp
@@ -56,6 +56,7 @@
 		<Unit filename="src/udp_server.hpp" />
 		<Unit filename="tests/bad_configs.cpp" />
 		<Unit filename="tests/test_2.cpp" />
+		<Unit filename="tests/test_3.cpp" />
 		<Extensions>
 			<envvars />
 			<code_completion />
