--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libboost-all-dev
 install: true
-script: make demo
+script:
+ - make demo
+ - make test
 
