--- a/project.cbp
+++ b/project.cbp
@@ -55,10 +55,10 @@
 		<Unit filename="src/turnstyle_1.cpp" />
 		<Unit filename="src/turnstyle_2.cpp" />
 		<Unit filename="src/udp_server.hpp" />
-		<Unit filename="tests/test_1.cpp" />
-		<Unit filename="tests/test_2.cpp" />
-		<Unit filename="tests/test_3.cpp" />
-		<Unit filename="tests/test_4.cpp" />
+		<Unit filename="tests/testA_1.cpp" />
+		<Unit filename="tests/testA_2.cpp" />
+		<Unit filename="tests/testA_3.cpp" />
+		<Unit filename="tests/testB_4.cpp" />
 		<Extensions>
 			<envvars />
 			<code_completion />
