minor cleaning, added doc page

--- a/project.cbp
+++ b/project.cbp
@@ -33,6 +33,7 @@
 		<Unit filename="docs/spaghetti_options.md" />
 		<Unit filename="docs/spaghetti_rendering.md" />
 		<Unit filename="docs/spaghetti_roadmap.md" />
+		<Unit filename="docs/spaghetti_timeout.md" />
 		<Unit filename="doxyfile" />
 		<Unit filename="spaghetti.hpp" />
 		<Unit filename="src/doxyfile" />
