--- a/project.cbp
+++ b/project.cbp
@@ -36,6 +36,7 @@
 		<Unit filename="docs/spaghetti_timeout.md" />
 		<Unit filename="doxyfile" />
 		<Unit filename="spaghetti.hpp" />
+		<Unit filename="src/doc_fig_1.cpp" />
 		<Unit filename="src/doxyfile" />
 		<Unit filename="src/sample1.dot" />
 		<Unit filename="src/sample_0.cpp" />
