--- a/misc/project.cbp
+++ b/misc/project.cbp
@@ -10,9 +10,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="CHANGELOG" />
-		<Unit filename="Makefile" />
-		<Unit filename="README.md" />
+		<Unit filename="../CHANGELOG" />
+		<Unit filename="../Makefile" />
+		<Unit filename="../README.md" />
 		<Unit filename="../docs/spaghetti_changelog.md" />
 		<Unit filename="../docs/spaghetti_devinfo.md" />
 		<Unit filename="../docs/spaghetti_faq.md" />
@@ -22,7 +22,7 @@
 		<Unit filename="../docs/spaghetti_rendering.md" />
 		<Unit filename="../docs/spaghetti_summary.md" />
 		<Unit filename="../docs/spaghetti_timeout.md" />
-		<Unit filename="../doxyfile" />
+		<Unit filename="../misc/doxyfile" />
 		<Unit filename="../spaghetti.hpp" />
 		<Unit filename="../src/common_stuff_samples.hpp" />
 		<Unit filename="../src/doc_fig_1.cpp" />
@@ -35,7 +35,7 @@
 		<Unit filename="../src/sample_3.cpp" />
 		<Unit filename="../src/sample_3b.cpp" />
 		<Unit filename="../src/sample_3c.cpp" />
-		<Unit filename="../src/spaghetti.css" />
+		<Unit filename="../misc/spaghetti.css" />
 		<Unit filename="../src/traffic_lights_1.cpp" />
 		<Unit filename="../src/traffic_lights_1b.cpp" />
 		<Unit filename="../src/traffic_lights_1c.cpp" />
@@ -46,21 +46,21 @@
 		<Unit filename="../src/turnstyle_1.cpp" />
 		<Unit filename="../src/turnstyle_2.cpp" />
 		<Unit filename="../src/udp_server.hpp" />
-		<Unit filename="../test/nobuild_1.cpp" />
-		<Unit filename="../test/nobuild_2.cpp" />
-		<Unit filename="../test/nobuild_3.cpp" />
-		<Unit filename="../test/nobuild_4.cpp" />
-		<Unit filename="../test/nobuild_5.cpp" />
-		<Unit filename="../test/nobuild_6.cpp" />
-		<Unit filename="../test/readme.txt" />
-		<Unit filename="../test/testA_1.cpp" />
-		<Unit filename="../test/testA_1.stdout" />
-		<Unit filename="../test/testA_2.cpp" />
-		<Unit filename="../test/testA_2.stdout" />
-		<Unit filename="../test/testA_3.cpp" />
-		<Unit filename="../test/testA_3.stdout" />
-		<Unit filename="../test/testB_4.cpp" />
-		<Unit filename="../test/testB_5.cpp" />
+		<Unit filename="../tests/nobuild_1.cpp" />
+		<Unit filename="../tests/nobuild_2.cpp" />
+		<Unit filename="../tests/nobuild_3.cpp" />
+		<Unit filename="../tests/nobuild_4.cpp" />
+		<Unit filename="../tests/nobuild_5.cpp" />
+		<Unit filename="../tests/nobuild_6.cpp" />
+		<Unit filename="../tests/readme.txt" />
+		<Unit filename="../tests/testA_1.cpp" />
+		<Unit filename="../tests/testA_1.stdout" />
+		<Unit filename="../tests/testA_2.cpp" />
+		<Unit filename="../tests/testA_2.stdout" />
+		<Unit filename="../tests/testA_3.cpp" />
+		<Unit filename="../tests/testA_3.stdout" />
+		<Unit filename="../tests/testB_4.cpp" />
+		<Unit filename="../tests/testB_5.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
